--- a/admin/templ/adminprofile.html
+++ b/admin/templ/adminprofile.html
@@ -84,7 +84,7 @@
                     <small class="text-uc text-xs text-muted">about {{selUser.fname}}</small>
                     <p>Artist</p>
                     <small class="text-uc text-xs text-muted">info</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id neque quam. Aliquam sollicitudin venenatis ipsum ac feugiat.</p>
+                    <p>{{selUser.bio}}</p>
                     <div class="line"></div>
                     <small class="text-uc text-xs text-muted">connection</small>
                     <p class="m-t-sm">
