--- a/admin/templ/userList.html
+++ b/admin/templ/userList.html
@@ -22,7 +22,7 @@
     <a href="#" class="clear" ng-click="openDetail(u)">
         <span class="pull-right label label-sm bg-primary text-uc">{{u.dept.name}}</span>
         <strong>{{u.fname}} {{u.lname}}</strong>
-        <span>Since {{u.startDate}}</span>
+        <span>Since {{u.sinceFormatted}}</span>
     </a>
 </li>
 </ul>
