--- a/admin/templ/widgetTools.html
+++ b/admin/templ/widgetTools.html
@@ -1,4 +1,5 @@
 <div class="doc-buttons pull-right">
+    <button class="btn btn-success btn-sm" ng-click="newUI()"><i class="fa fa-plus"></i> New</button>
     <button class="btn btn-success btn-sm" ng-click="loadCartSteps()"><i class="fa fa-list-ol"></i> Flow</button>
     <button class="btn btn-success btn-sm" ng-click="saveObj()"><i class="fa fa-save"></i> Save</button>
 </div>
