--- a/portal.html
+++ b/portal.html
@@ -257,7 +257,7 @@
     <div class="btn-group">
         <!--<button type="button" class="btn btn-sm btn-dark btn-icon" title="New project"><i class="fa fa-plus"></i></button>-->
         <div class="btn-group hidden-nav-xs">
-            <button type="button" class="btn btn-sm btn-dark btn-icon" title="Edit" ng-click="editTenant()"><i class="fa fa-pencil"></i></button>
+            <button type="button" class="btn btn-sm btn-dark btn-icon" title="Edit" ng-click="editTenant(selTen)"><i class="fa fa-pencil"></i></button>
             <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">
                 <span>{{selTen.name}}</span>
                 <span class="caret"></span>
@@ -544,6 +544,10 @@
 <script src="ctrl/dashctrl.js" type="text/javascript"></script>
 <script src="ctrl/adminctrl.js" type="text/javascript"></script>
 <script src="ctrl/exportctrl.js" type="text/javascript"></script>
+<script src="ctrl/ruledefctrl.js" type="text/javascript"></script>
+<script src="ctrl/blockctrl.js" type="text/javascript"></script>
+<script src="ctrl/fieldctrl.js" type="text/javascript"></script>
+<script src="ctrl/appctrl.js" type="text/javascript"></script>
 <script src="ctrl/rulectrl.js" type="text/javascript"></script>
 <script src="dir/gridDir.js" type="text/javascript"></script>
 <script src="dir/mknotify.js" type="text/javascript"></script>
